# astro-archives-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: dlai01-vllm-runbook.md  gp12-runbook.md  gp13-runbook.md  staging-runbook.md
deploy/frontend/: .env.example  README.md  claude_settings.json  docker-compose.yml  frontend.Dockerfile  hub.Dockerfile  jupyterhub_config.py  mcp_settings.json
docs/: jupyter-ai-integration.md  local-model-backend.md
docs/examples/: mcp_settings.json
src/astro_archives_mcp/: __main__.py  _archive_label.py  _serialization.py  app.py  config.py  errors.py  job_store.py  known_archives.py  observability.py  resources.py  result_store.py  schema_kb.py  shaper.py
tests/: conftest.py
tests/app/: test_build_app.py  test_health_reports_job_store.py
tests/backends/: conftest.py  test_cone_search_client.py  test_registry_client.py  test_resolver_client.py  test_sia_client.py  test_tap_async.py  test_tap_client.py
tests/contracts/: test_error_envelope.py  test_tool_schema.py
tests/resources/: test_resource_serving.py
tests/tools/: test_async_tap_lifecycle.py  test_auto_promote.py  test_vo_archive_list.py  test_vo_cone_search.py  test_vo_registry_describe.py  test_vo_registry_search.py  test_vo_schema_describe.py  test_vo_sia_fetch.py  test_vo_sia_search.py  test_vo_tap_query.py  test_vo_target_resolve.py
tests/unit/: test_archive_label.py  test_caller_context.py  test_config.py  test_errors.py  (+13 more)
(+55 files in other folders)
