[project]
name = "astro-archives-mcp"
version = "0.1.0"
description = "MCP server for IVOA-compliant astronomical archives"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "STABLE / CosmicAI", email = "noreply@example.invalid" }]
dependencies = [
    "fastmcp>=3.0,<4.0",
    "pyvo>=1.8,<2.0",
    "astropy>=6.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "starlette>=0.40",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pyarrow>=15",
]

[project.scripts]
astro-archives-mcp = "astro_archives_mcp.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-recording>=0.13",
    "vcrpy>=6.0",
    "inline-snapshot>=0.13",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astro_archives_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]
